@@ -20,6 +20,7 @@ import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.QueryParam;
+import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.EntityTag;
 import javax.ws.rs.core.GenericEntity;
@@ -28,9 +29,12 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Request;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.ResponseBuilder;
+import javax.ws.rs.core.Response.Status;
 import javax.ws.rs.core.UriInfo;
 
+import au.edu.unsw.soacourse.hrSystem.dao.ApplicationDao;
 import au.edu.unsw.soacourse.hrSystem.dao.ReviewDao;
+import au.edu.unsw.soacourse.hrSystem.model.Application;
 import au.edu.unsw.soacourse.hrSystem.model.CompanyProfile;
 import au.edu.unsw.soacourse.hrSystem.model.HypermediaLink;
 import au.edu.unsw.soacourse.hrSystem.model.Review;
@@ -39,6 +43,7 @@ import au.edu.unsw.soacourse.hrSystem.model.Review;
 public class ReviewRs {
 	ReviewDao ReviewDao = new ReviewDao();
 	ApplicationRs applicationRs = new ApplicationRs();
+	ApplicationDao applicationDao = new ApplicationDao();
 	
 		@Context
 		UriInfo uriInfo;
@@ -46,12 +51,11 @@ public class ReviewRs {
 		Request request;
 		
 		//get all reviews
-		//TODO: consider response		
 		@GET
 		@Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
 		public Response getReviews(
 				@HeaderParam("SecurityKey") String SecurityKey, 
-				@HeaderParam("ShortKey") String ShortKey) {
+				@HeaderParam("ShortKey") String ShortKey) throws MalformedURLException {
 			
 		//check the SecurityKey and ShortKey
 		int ret_code = checkSecurity(SecurityKey, ShortKey, "GET");
@@ -59,20 +63,23 @@ public class ReviewRs {
 			
 		List<Review> rs = ReviewDao.get();
 		if(rs==null) {
-			throw new RuntimeException("GET: reviews not found");
+			System.out.println("Reviews Not Found");
+			ResponseBuilder builder = Response.status(Status.NOT_FOUND); 
+			builder.type("text/html"); builder.entity("Reviews Not Found"); 
+			throw new WebApplicationException(builder.build()); 
 		}	
-		
+			
 		//for hateoas for body
 		for( Review r:rs){
 			
 		    HypermediaLink linkToSelf = new HypermediaLink();
-		    String hrefRoot = javax.ws.rs.core.Link.fromResource(getClass()).build().getUri().toString();
-	
-		    String href = javax.ws.rs.core.Link.fromMethod(getClass(),"getReview").build().getUri().toString();
-		    String kk = javax.ws.rs.core.Link.fromMethod(getClass(),"getReview").param("revID", r.getRevID()).build().getUri().toString();
+		    String base_uri = uriInfo.getBaseUri().toString();
+		    if (base_uri.endsWith("/")==true) base_uri = base_uri.substring(0, base_uri.length()-1);
+		    String resource_uri = javax.ws.rs.core.Link.fromResource(getClass()).build().getUri().toString();
+		    String method_uri = javax.ws.rs.core.Link.fromMethod(getClass(),"getReview").param("revID", r.getRevID()).build().getUri().toString();
 		     
 		    linkToSelf.setRel("get");
-		    linkToSelf.setHref(hrefRoot+kk);
+		    linkToSelf.setHref(base_uri+resource_uri+method_uri);
 		    System.out.println("test the hypermedia!"+ linkToSelf.getHref());
 		    r.addHypermediaLink(linkToSelf);
 		}
@@ -99,7 +106,6 @@ public class ReviewRs {
 	    }*/
    
 		//get specific review
-		//TODO: consider response		
 		@GET
 		@Path("/get")
 		@Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
@@ -114,30 +120,33 @@ public class ReviewRs {
 		
 		Review r = ReviewDao.getReview(revID);
 		if(r==null) {
-			throw new RuntimeException("GET: review with" + revID +  " not found");
+			System.out.println("Review Not Found");
+			ResponseBuilder builder = Response.status(Status.NOT_FOUND); 
+			builder.type("text/html"); builder.entity("Review Not Found"); 
+			throw new WebApplicationException(builder.build()); 
 		}	
 		return Response.ok(r).build();
 		}
 
 		//get specific application
-		//TODO: consider response		
 		@GET
 		@Path("/getApplication")
 		@Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
 		public Response getApplication(
 				@HeaderParam("SecurityKey") String SecurityKey, 
 				@HeaderParam("ShortKey") String ShortKey,
-				@QueryParam("appID") String appID) {
+				@QueryParam("appID") String appID) throws MalformedURLException {
 		
 		//check the SecurityKey and ShortKey
 		int ret_code = checkSecurity(SecurityKey, ShortKey, "GET");
 		if (ret_code!= 200) return Response.status(ret_code).build();
 		
-		System.out.println("here111111111:" + appID);
-		
 		List<Review> as = ReviewDao.getApp(appID);
 		if(as==null) {
-			throw new RuntimeException("GET: applications with" + appID +  " not found");
+			System.out.println("Reviews Not Found");
+			ResponseBuilder builder = Response.status(Status.NOT_FOUND); 
+			builder.type("text/html"); builder.entity("Reviews with " + appID +" Not Found"); 
+			throw new WebApplicationException(builder.build()); 
 		}	
 		System.out.println("here22222");
 
@@ -154,15 +163,14 @@ public class ReviewRs {
 		for(Review a:as){
 			
 		    HypermediaLink linkToSelf = new HypermediaLink();
-		    String hrefRoot = javax.ws.rs.core.Link.fromResource(applicationRs.getClass()).build().getUri().toString();
-		    System.out.println("hrefRoot111111111111111"+hrefRoot);
 		    
-		    String href = javax.ws.rs.core.Link.fromMethod(applicationRs.getClass(),"getApplication").build().getUri().toString();
-		    String kk = javax.ws.rs.core.Link.fromMethod(applicationRs.getClass(),"getApplication").param("appID", a.getAppID()).build().getUri().toString();
-		    System.out.println(kk);
+		    String base_uri = uriInfo.getBaseUri().toString();
+		    if (base_uri.endsWith("/")==true) base_uri = base_uri.substring(0, base_uri.length()-1);
+		    String resource_uri = javax.ws.rs.core.Link.fromResource(applicationRs.getClass()).build().getUri().toString();
+		    String method_uri = javax.ws.rs.core.Link.fromMethod(applicationRs.getClass(),"getApplication").param("appID", a.getAppID()).build().getUri().toString();
 		     
 		    linkToSelf.setRel("get");
-		    linkToSelf.setHref(hrefRoot+kk);
+		    linkToSelf.setHref(base_uri+resource_uri+method_uri);
 		    a.addHypermediaLink(linkToSelf);
 		}
 
@@ -172,18 +180,7 @@ public class ReviewRs {
 		return Response.ok(entity).build();
 		}
 		
-/*		//For hatetoas for header
-	    private Link[] getApplicationLinks(String appID) {
-    	
-	    	//TODO: check if getApplication of ApplicationRs has QueryParam --> otherwise error!!! 
-	    	Link application = Link.fromMethod(ApplicationRs.class, "getApplication").rel("get").param("appID", appID).build();;
-
-	    	return new Link[] {application};
-	    }
-		*/
-		
 		//get specific reviewer
-		//TODO: consider response		
 		@GET
 		@Path("/getReviewer")
 		@Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
@@ -198,20 +195,23 @@ public class ReviewRs {
 			
 		List<Review> rs = ReviewDao.getRev(userID);
 		if(rs==null) {
-			throw new RuntimeException("GET: reviewers with" + userID +  " not found");
+			System.out.println("Reviewer Not Found");
+			ResponseBuilder builder = Response.status(Status.NOT_FOUND); 
+			builder.type("text/html"); builder.entity("Reviewer Not Found"); 
+			throw new WebApplicationException(builder.build()); 
 		}	
 		
 		//for hateoas for body
 		for(Review r:rs){
-			
+
 		    HypermediaLink linkToSelf = new HypermediaLink();
-		    String hrefRoot = javax.ws.rs.core.Link.fromResource(applicationRs.getClass()).build().getUri().toString();
-	
-		    String href = javax.ws.rs.core.Link.fromMethod(applicationRs.getClass(),"getApplication").build().getUri().toString();
-		    String kk = javax.ws.rs.core.Link.fromMethod(applicationRs.getClass(),"getApplication").param("appID", r.getAppID()).build().getUri().toString();
+		    String base_uri = uriInfo.getBaseUri().toString();
+		    if (base_uri.endsWith("/")==true) base_uri = base_uri.substring(0, base_uri.length()-1);
+		    String resource_uri = javax.ws.rs.core.Link.fromResource(applicationRs.getClass()).build().getUri().toString();
+		    String method_uri = javax.ws.rs.core.Link.fromMethod(applicationRs.getClass(),"getApplication").param("appID", r.getAppID()).build().getUri().toString();
 		     
 		    linkToSelf.setRel("get");
-		    linkToSelf.setHref(hrefRoot+kk);
+		    linkToSelf.setHref(base_uri+resource_uri+method_uri);
 		    r.addHypermediaLink(linkToSelf);
 		}
 
@@ -222,7 +222,6 @@ public class ReviewRs {
 		}
 		
 		// update Review by reviewer
-		//TODO: consider response
 		@PUT
 		@Path("/update")
 		@Consumes(MediaType.APPLICATION_FORM_URLENCODED)
@@ -232,8 +231,8 @@ public class ReviewRs {
 				@QueryParam("revID") String revid,
 				@FormParam("appID") String appid,
 				@FormParam("userID") String userid,
-				@FormParam("reStatus1") String reStatus1,
-				@FormParam("reStatus2") String reStatus2,
+				@FormParam("comment") String comment,
+				@FormParam("reStatus") String reStatus,
 				@FormParam("magStatus") String magStatus
 		) throws IOException, URISyntaxException {
 						
@@ -241,35 +240,61 @@ public class ReviewRs {
 			int ret_code = checkSecurity(SecurityKey, ShortKey, "PUT");
 			if (ret_code!= 200) return Response.status(ret_code).build();
 			
-			Review r = new Review(revid,appid,userid,reStatus1,reStatus2,magStatus);
+			Review r = new Review(revid,appid,userid,comment,reStatus,magStatus);
 
 			//if the revid doesn't exist, create new Review 
 			//TODO: basically it's impossible there is no existing revid
 			//      and also the reviewer can't create a review because that is responsible for manager
 			//      so.....consider what to do then
 			if(ReviewDao.getRev(r.getRevID()) == null){
+
+				// check the status of the applicant (if the status is not pass(1), then cannot create)
+				if (checkStaus(appid).equals("1") == false){
+					System.out.println("The result of auto-check of the applicant is not pass");
+					ResponseBuilder builder = Response.status(Status.PRECONDITION_FAILED); 
+					builder.type("text/html"); builder.entity("The result of auto-check of the applicant is not pass"); 
+					throw new WebApplicationException(builder.build()); 					
+				}
+
+				//create id using maximum number of revid
+				revid = ReviewDao.max();
+				if (revid == null) revid = "1";
+				else revid = String.valueOf(Integer.valueOf(revid)+1);
+				r.setRevID(revid);
+				
 				if (ReviewDao.post(r)==true){
 					//URL uri = new URL(uriInfo.getAbsolutePath().toURL() +"/"+ revid);
-					URL uri = new URL(uriInfo.getBaseUriBuilder().build() +"/"+ revid);
+					URL uri = new URL(uriInfo.getBaseUri().toURL() +"review/get?revID="+ revid);
 					System.out.println(uri.toString());
 					return Response.seeOther(uri.toURI()).build();
 				}
-				else
-					return Response.ok().build();
+				else{
+					System.out.println("Create new review failed");
+					ResponseBuilder builder = Response.status(Status.NOT_IMPLEMENTED); 
+					builder.type("text/html"); builder.entity("Create new review failed"); 
+					throw new WebApplicationException(builder.build()); 
+				}
 			}
 			else {
-				//TODO: in this case, it is needed to check the review status
-				//      if the status is not open (that means the review already has done), return error~~
-				// if (r.getStatus().equals("0") == false)
-				//	return error~~~
+				// check the status of the applicant (if the status is not pass(1), then cannot update)
+				if (checkStaus(appid).equals("1") == false){
+					System.out.println("review update failed becuase of status");
+					ResponseBuilder builder = Response.status(Status.NOT_MODIFIED); 
+					builder.type("text/html"); builder.entity("review update failed becuase of status"); 
+					throw new WebApplicationException(builder.build()); 					
+				}
 				
-				ReviewDao.put(r);
+				if (ReviewDao.put(r) == null){
+					System.out.println("review update failed");
+					ResponseBuilder builder = Response.status(Status.NOT_MODIFIED); 
+					builder.type("text/html"); builder.entity("review update failed"); 
+					throw new WebApplicationException(builder.build()); 					
+				}
 				return Response.ok(r).build();
 			}
 		}
 		
 	    // create new review
-		//TODO: consider response
 		@POST
 		@Path("/new")
 		@Consumes(MediaType.APPLICATION_FORM_URLENCODED)
@@ -288,12 +313,13 @@ public class ReviewRs {
 			int ret_code = checkSecurity(SecurityKey, ShortKey, "POST");
 			if (ret_code!= 200) return Response.status(ret_code).build();
 			
-			//TODO: check precondition.....the results of auto-checks 
-			//  -> check the value of 'autoStaus' of tb_application using the given appID
-			//  -> if the value is 1 (pass), then can go, otherwise return error
-			//Application a = ApplicationDao.selectByApp(appID);
-			//if (a.getAutoStatus.equals("1") == false)
-			// 	return Response.ok().build();
+			// check the status of the applicant (if the status is not pass(1), then cannot create)
+			if (checkStaus(appid).equals("1") == false){
+				System.out.println("The result of auto-check of the applicant is not pass");
+				ResponseBuilder builder = Response.status(Status.PRECONDITION_FAILED); 
+				builder.type("text/html"); builder.entity("The result of auto-check of the applicant is not pass"); 
+				throw new WebApplicationException(builder.build()); 					
+			}
 			
 			//create id using maximum number of revid
 			String revid = ReviewDao.max();
@@ -303,21 +329,31 @@ public class ReviewRs {
 			Review r = new Review(revid,appid,userid,comment,reStatus,magStatus);
 
 			if (ReviewDao.post(r)==true){
-				//TODO:modify the path because it include /new
 				URL uri = new URL(uriInfo.getBaseUri().toURL() +"review/get?revID="+ revid);
 				System.out.println(uri.toString());
 				return Response.seeOther(uri.toURI()).build();
 			}
-			else
-				//TODO: consider the response
-				return Response.ok().build();
+			else{
+				System.out.println("Create new review failed");
+				ResponseBuilder builder = Response.status(Status.NOT_IMPLEMENTED); 
+				builder.type("text/html"); builder.entity("Create new review failed"); 
+				throw new WebApplicationException(builder.build()); 
+			}
 		}
 
+		//check the status of the application
+		private String checkStaus(String appid){
+		
+			Application a = applicationDao.selectByApp(appid);
+			System.out.println("application autostatus = " + a.getAutoStatus());
+			
+			return a.getAutoStatus();
+		}
+		
 		//check authentication and authorization 
 		private int checkSecurity(String SecurityKey, String ShortKey, String annotation){
 			
 			//For authentication
-			//TODO: check correct code number (what number????)
 			if(SecurityKey.equals("i-am-foundit")==false)
 				return 401;
 			//For authorization
